--- a/src/Pages/Connect/Connect.css
+++ b/src/Pages/Connect/Connect.css
@@ -5,6 +5,7 @@
   align-items: center;
   min-height: 100vh;
   height: auto;
+  width: 90%;
 }
 .connect-top {
   display: flex;
@@ -86,4 +87,55 @@
   border-radius: 10px;
   padding: 0.5rem 0rem;
   padding: 13px 25px;
+}
+@media screen and (max-width: 1458px) {
+  .connect-box p:first-of-type {
+    color: white;
+    font-size: 2rem;
+  }
+  .connect-box p:last-of-type {
+    color: #7e93d6;
+    font-size: 0.8rem;
+  }
+  .longer-top p {
+    font-size: 2rem !important;
+  }
+}
+@media screen and (max-width: 1141px) {
+  .connect-box {
+    flex: 1;
+  }
+  .longer {
+    flex: 1;
+  }
+  .logo-connect {
+    max-width: 14%;
+  }
+  .claim {
+    width: 50%;
+    margin-left: 20px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .connect-top {
+    flex-direction: column;
+    width: 100%;
+  }
+  .connect-box {
+    width: 70%;
+    flex: none;
+    height: 250px;
+  }
+  .connect-bottom {
+    min-height: 60vh;
+    margin-top: 50px;
+    border-radius: 25px;
+  }
+}
+@media screen and (max-width: 490px) {
+  .connect-box {
+    width: 100%;
+    flex: none;
+    height: 250px;
+  }
 }
