--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
       rgba(64, 191, 149, 0.15),
       rgba(33, 31, 35, 0.1) 28%
     ); */
-  background-color: #211f23;
+  background-color: #100629;
   background-size: auto, auto, auto, auto, auto, cover;
   background-repeat: repeat, repeat, repeat, repeat, repeat, no-repeat;
 }
