--- a/src/Layout/Header/Header.css
+++ b/src/Layout/Header/Header.css
@@ -108,6 +108,9 @@ nav {
     width: 100%;
     padding-inline: 2rem;
   }
+  .header-left {
+    padding-left: 0.5rem;
+  }
 }
 @media screen and (max-width: 1375px) {
   .nav-links {
