--- a/src/Pages/MetaBox/MetaBox.css
+++ b/src/Pages/MetaBox/MetaBox.css
@@ -8,6 +8,7 @@
   background-color: rgba(126, 147, 214, 0.9);
   border-radius: 25px;
   margin-bottom: 20px;
+  padding: 2rem 0rem;
 }
 .meta-top {
   display: flex;
