--- a/src/Pages/Connection/MetaBox/MetaBox.css
+++ b/src/Pages/Connection/MetaBox/MetaBox.css
@@ -7,8 +7,9 @@
   min-height: 40vh;
   background-color: rgba(126, 147, 214, 0.9);
   border-radius: 25px;
-  margin-bottom: 20px;
   padding: 2rem 0rem;
+  gap: 20px;
+  margin: auto;
 }
 .meta-top {
   display: flex;
@@ -22,6 +23,7 @@
   font-size: 2.5rem;
 }
 .meta-bottom {
+  gap: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
